--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 
           <p class="w3-large"  style="margin-top:-10px"><b><i class="fa fa-code-fork w3-xlarge fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
 		  
-		  <p style="margin-top:-10px"> <h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Python &nbsp; &nbsp; </h6> <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></h7></a> <h7 class="w3-text-grey"> Python Project</h7> </p>
+		  <p style="margin-top:-10px"> <h6> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </h6> <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> <h7 class="w3-text-grey"> Python Project </h7> </p>
 		  
           <p> <h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square w3-text-kent-blue"></i></a></h7> <h7></i> C++ Projects </h7> </h6></p>
 		 
