--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		  
 		  <table style="margin-top-10px">
 			  <tr class="spaceUnder">
-				  <th><i class="fa fa-code-fork w3-xlarge fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</th>
+				  <th><i class="fa fa-code-fork w3-xlarge fa-fw w3-text-kent-blue"></i><font size ="+1"> Languages </font> </th>
+				  <th> </th>
 			  </tr>
 			  <tr class="spaceUnder">
 				  <td>
-					  <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </font>
+					  <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </font>
 				  </td>
 				  <td>
 					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> <font size="-1" class="w3-text-grey"> Python Project </font>
@@ -51,7 +52,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td>
-					 <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; </font>
+					 <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; </font>
 				 </td>
 				 <td>
 					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><font size ="-1" class="w3-text-kent-blue"><i class="fa fa-external-link-square w3-text-kent-blue"></i> </font> </a> <font size="-1"> C++ Projects </font>
@@ -59,7 +60,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td>
-					 <font size="+1"><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; </font>
+					 <font size="+0"><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; </font>
 				 </td>
 				 <td>
 					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <font size="-1" class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></font> <font size="-1"></i> CV written in LaTeX</font> </h6> 
@@ -67,7 +68,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td>
-					 <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran </font>
+					 <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran </font>
 				 </td>
 				 <td>
 				 </td>
