--- a/index.html
+++ b/index.html
@@ -96,23 +96,23 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
         <div class="w3-container w3-card-2 w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-kent-blue"></i>Education</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
+            <h5 class="w3-opacity" style="font-weight: bold;">University of Kent, Canterbury</h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
-            <h6 class="w3-text-grey">MSc / Physics</h6>
-			<p>Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research is centred around modelling different accretion scenarios in early proto stellar formation and to find any difference in evolutionary tracks across a range of stellar masses. The research is incremental to pre-existing code and offered novel techniques in making comparisons between modelled and observational data. The research employed multiple analytical tools to find correlation and points of significant interest. </p></h6>
+            <h6 class="w3-text-grey" >MSc / Physics</h6>
+			<p class="w3-text-grey">Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research is centred around modelling different accretion scenarios in early proto stellar formation and to find any difference in evolutionary tracks across a range of stellar masses. The research is incremental to pre-existing code and offered novel techniques in making comparisons between modelled and observational data. The research employed multiple analytical tools to find correlation and points of significant interest. </p>
 			<a href="./Thesis-Final.pdf" download="D-Hastie-Thesis" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7>   <h7 class="w3-text-grey"> Thesis Download </h7>
 			<hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
+            <h5 class="w3-opacity" style="font-weight: bold;">University of Kent, Canterbury </h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
-            <h6 class="w3-text-grey"><p>BSc / Physics </p>
-			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems. Each year had an acompanying laboratory module involving replicating renowned experiments and producing professional scientific reports detailing the results. Final exams focused on testing problem solving ability and adapting fundamental physics to diverse scenarios. The exams often required incorporating knowledge and techniques from other fields of physics.  </p></h6>
+            <h6 class="w3-text-grey">BSc / Physics 
+			<p class="w3-text-grey">A comprehensive course covering the many aspects of physics from thermodynamics to space systems. Each year had an acompanying laboratory module involving replicating renowned experiments and producing professional scientific reports detailing the results. Final exams focused on testing problem solving ability and adapting fundamental physics to diverse scenarios. The exams often required incorporating knowledge and techniques from other fields of physics.  </p></h6>
 			<a href="./D-Hastie-Modules.pdf" download="D-Hastie-Modules" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg"></i></a></h7>  <h7 class="w3-text-grey"> Module Breakdown </h7>
             <hr>
           </div>
           <div class="w3-container">	
-            <h5 class="w3-opacity"><b>Misbourne School</b></h5>
+            <h5 class="w3-opacity" style="font-weight: bold;">Misbourne School</h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2003 - 2010</h6>
             <h6 class="w3-text-grey"><p>Secondary Education</p></h6><br>
           </div>
