--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <div class="w3-container">	
             <h5 class="w3-opacity" style="font-weight: bold;">Misbourne School</h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2003 - 2010</h6>
-            <h6 class="w3-text-grey"><p>Secondary Education</p></h6><br>
+            <h6 class="w3-text-grey">Secondary Education</h6><br>
           </div>
         </div>
 		
@@ -131,13 +131,13 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		  <li> Discipline and critical thinking is necessity to ensure time is used efficiently</li>
 		  <li> Intuition and previous experience is used to determine a products true value and profitability.</li>
 		  <li> In a move to improve efficiency and automate repetitive tasks, a python script using the amazon API was developed. The automation tracks and evaluates products, allowing time to be focused on finding new products.</li>
-		  <li>  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7> Link to python program.</h7> </li> 
+		  <li>  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker" class="w3-text-kent-blue" style="font-size:13px"><i class="fa fa-external-link-square"></i></a> <span style="font-size:13px" class="w3-text-grey"> Link to python program.</space> </li> 
           </ul>  
           <hr>
 	  	</div>
 	  	<!--List items -->
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Barista - Pantry (Café)</b></h5>
+          <h5 class="w3-opacity" style="font-weight: bold">Barista - Pantry (Café)</h5>
           <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i> 06/2012 - 09/2015</h6> 
 		<ul class="w3-text-grey">
 		  <li> A fast paced team position requiring clear verbal communication to accomplish tasks, and ensuring smooth operation of the buisness</li>
@@ -147,7 +147,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		</div> 
           <hr>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Customer Service &amp; Computer Repairs - PC World</b></h5>
+          <h5 class="w3-opacity" style="font-weight: bold;"><b>Customer Service &amp; Computer Repairs - PC World</b></h5>
           <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i> 09/2010 - 08/2011 </h6>
   		<ul class="w3-text-grey">
   		  <li>A team based role, providing experience in using multipleplatforms of communication with colleagues, managementand customers. </li>
